# sakhezech.github.io

./: .gitignore  pyproject.toml
.github/workflows/: deploy-pages.yaml
assets/css/: style.css
pages/: index.html  pronunciation.html
templates/: main.html
